🚧  fix(dashboard): fix bottom save bar z-index styling

--- a/src/style/_forms.scss
+++ b/src/style/_forms.scss
@@ -240,7 +240,7 @@ form {
   text-align: right;
   width: 100%;
   transition: height 0.1s linear;
-  z-index: 1;
+  z-index: 3;
 
   &.show {
     height: 60px;
